Fix user profile posts alignment

--- a/app/app/styles/_profileCommon.scss
+++ b/app/app/styles/_profileCommon.scss
@@ -609,6 +609,10 @@
     .large-10 {
         float: unset;
         margin: 0px auto;
+        .columns {
+            padding-left:0;
+            padding-right:0;
+        }
     }
     & > article.hiddenAvatar > section {
         @extend .large-centered;
